--- a/views/index.jade
+++ b/views/index.jade
@@ -3,12 +3,17 @@ p Welcome to #{title}
 
 form(method='post', action='/')
     div
-      label Grove.io Webhook:
-        input(name='groveio', value=groveio)
+        label Grove.io Webhook:
+            input(name='groveio', value=groveio)
     
     div
         label Feed:
-        input(name='feed', value=feed)
-        
-    div
-        input(type='submit', value='Save')
+            input(name='feed', value=feed)
+    
+    - if (groveio!== "" && feed !== "")
+        div
+            input(type='submit', value='Stop Following')
+    - else
+        div
+            input(type='submit', value='Start Following')
+    
