--- a/views/failure.jade
+++ b/views/failure.jade
@@ -1,2 +1,4 @@
-h1= title
-p FAIL!
+header
+    h1= "Error"
+
+div.alert.alert-error= "We couldn't perform that operation. Please, try again, and report the error if that persists!"
