--- a/views/success.jade
+++ b/views/success.jade
@@ -1,2 +1,4 @@
-h1= title
-p WIN!
+header
+    h1= "Success"
+
+div.alert.alert-success="Success. You should have gotten a confirmation in the IRC channel already :)"
