the unsusbcribe button is now red

--- a/views/index.jade
+++ b/views/index.jade
@@ -18,5 +18,5 @@ form(method='post', action='/')
     - else
         div
             input(type='hidden', name='mode', value='subscribe')
-            input.btn-primary.btn-large(type='submit', value='Start Following')
+            input.btn-danger.btn-large(type='submit', value='Start Following')
     
