updated README url

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,4 +14,4 @@ html
         != body
         
         footer.footer
-            p Powered by <a href="http://superfeedr.com">Superfeedr</a>&nbsp;<img src="http://www.gravatar.com/avatar/a2f7d4dd6df7dd59e4adab811c00a3a1?s=24" style="vertical-align: middle;">, on <a href="http://www.heroku.com/">Heroku</a> -  or <a href="https://github.com/superfeedr/supergrover">Fork it</a> or <a href="https://github.com/superfeedr/supergrover/blob/master/README">run your own</a>.
+            p Powered by <a href="http://superfeedr.com">Superfeedr</a>&nbsp;<img src="http://www.gravatar.com/avatar/a2f7d4dd6df7dd59e4adab811c00a3a1?s=24" style="vertical-align: middle;">, on <a href="http://www.heroku.com/">Heroku</a> -  or <a href="https://github.com/superfeedr/supergrover">Fork it</a> or <a href="https://github.com/superfeedr/supergrover/blob/master/README.markdown">run your own</a>.
